--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "api": "node ratingsAPI.js",
     "format": "prettier --list-different --single-quote --print-width=120 webpack.config.js \"js/**/*.{js,jsx}\"",
-    "lint": "eslint **/*.{js,jsx} --quiet",
+    "lint": "./node_modules/eslint/bin/eslint.js **/*.{js,jsx} --quiet",
     "watch": "webpack --watch",
     "build": "webpack -p",
     "build:dev": "webpack -d",
