[Progress] - Jest setup

--- a/.babelrc
+++ b/.babelrc
@@ -24,7 +24,7 @@
       "plugins": ["transform-es2015-modules-commonjs"]
     },
     "test": {
-      "plugins": ["transform-es2015-modules-commonjs"]
+      "plugins": ["transform-es2015-modules-commonjs"] /* So that tests can understand our import statements (ES6 syntax in general) */
     }
   }
 }
